--- a/AFruitStats.html
+++ b/AFruitStats.html
@@ -34,7 +34,7 @@
         <div class="summary-card">
             <img src="imgs/icon6.png" alt="Icon" style="width: 5.5rem; height: 5.5rem;">
             <div class="card-info">
-                <span class="label">Peti Loss (Pieces)</span>
+                <span class="label">Compensation/Gift (Pieces)</span>
                 <span id="loss" class="value">Loading...</span>
             </div>
         </div>
@@ -42,7 +42,7 @@
         <div class="summary-card">
             <img src="imgs/icon6.png" alt="Icon" style="width: 5.5rem; height: 5.5rem;">
             <div class="card-info">
-                <span class="label">Kharab (Pieces)</span>
+                <span class="label">Rotten (Pieces)</span>
                 <span id="kharab" class="value">Loading...</span>
             </div>
         </div>
@@ -94,10 +94,10 @@
                 <tr>
                     <th>Batch</th>
                     <th>Peti Received</th>
-                    <th>Oranges Received (Pieces)</th>
-                    <th>Peti Loss (KG)</th>
-                    <th>Kharab (Pieces)</th>
-                    <th>Delivered (Pieces)</th>
+                    <th>Oranges Received (Pcs)</th>
+                    <th>Compensation/Gift (Pcs)</th>
+                    <th>Rotten (Pcs)</th>
+                    <th>Delivered (Pcs)</th>
                     <th>Description</th>
                 </tr>
             </thead>
