--- a/AFruitNewOrder.html
+++ b/AFruitNewOrder.html
@@ -99,7 +99,8 @@
                 <label for="order_type">Order Type:</label>
                 <select id="order_type" name="order_type">
                     <option value="" disabled selected>Select</option>
-                    <option value="Orange - Kinnow">Orange - Kinnow</option>
+                    <option value="Orange - Kinnow(Standard)">Orange - Kinnow(Standard)</option>
+                    <option value="Orange - Kinnow(Premium)">Orange - Kinnow(Premium)</option>
                     <option value="Orange - Mausambi">Orange - Mausambi</option>
                     <option value="Orange - Mausami">Orange - Mausami</option>
                     <option value="Orange - Red Blood">Orange - Red Blood</option>
@@ -107,13 +108,14 @@
             </div>
 
             <div class="input-section">
-                <label for="weight">Weight:</label>
+                <label for="weight">Pieces:</label>
                 <select id="weight" name="weight" required>
                     <option value="" disabled selected>Select</option>
-                    <option value="5KG - Premium">5KG - Premium</option>
-                    <option value="10KG - Premium">10KG - Premium</option> 
-                    <option value="5KG - Wooden Box">5KG - Wooden Box</option>
-                    <option value="10KG - Wooden Box">10KG - Wooden Box</option> 
+                    <option value="36 Pcs">36 Pcs</option>
+                    <option value="48 Pcs">48 Pcs</option>
+                    <option value="56 Pcs">56 Pcs</option>
+                    <option value="64 Pcs">64 Pcs</option>
+                    <option value="72 Pcs">72 Pcs</option>
                 </select>
             </div>
             
