--- a/AFruitNewOrder.html
+++ b/AFruitNewOrder.html
@@ -116,6 +116,7 @@
                     <option value="56 Pcs">56 Pcs</option>
                     <option value="64 Pcs">64 Pcs</option>
                     <option value="72 Pcs">72 Pcs</option>
+                    <option value="100 Pcs">100 Pcs</option>
                 </select>
             </div>
             
