--- a/AFruitTransactions.html
+++ b/AFruitTransactions.html
@@ -73,6 +73,7 @@
         <th>Quantity</th>
         <th>Type</th>
         <th>Weight</th>
+        <th>Week</th>
         <th>Pending Amount</th>
         <th>Payment Status</th>
         <th>Invoice</th>
