--- a/AFruitNewOrder.html
+++ b/AFruitNewOrder.html
@@ -102,8 +102,8 @@
                     <option value="Orange - Kinnow(Standard)">Orange - Kinnow(Standard)</option>
                     <option value="Orange - Kinnow(Premium)">Orange - Kinnow(Premium)</option>
                     <option value="Orange - Mausambi">Orange - Mausambi</option>
-                    <option value="Orange - Mausami">Orange - Mausami</option>
                     <option value="Orange - Red Blood">Orange - Red Blood</option>
+                    <option value="Orange - Deal 2026">Orange - Deal 2026</option>
                 </select>
             </div>
 
