--- a/AHalwaTransactions.html
+++ b/AHalwaTransactions.html
@@ -16,14 +16,14 @@
             <li><a href="index.php" class="hovere">Dashboard <span>›</span></a></li>
             <li><a href="AFruitNewOrder.html" class="hovere">Add New Order <span>›</span></a></li>
             <li><a href="AManageFruits.html" class="hovere">Orders Management <span>›</span></a></li>
-            <li class="active"><a href="AFruitTransactions.html">Transactions <span>›</span></a></li>
+            <li><a href="AFruitTransactions.html" class="hovere">Transactions <span>›</span></a></li>
             <li><a href="Expenses.html" class="hovere">Expenses <span>›</span></a></li>
             <li><a href="AFruitStats.html" class="hovere">Weekly Stats <span>›</span></a></li>
             <li style="padding: 8px 15px; color: #888; font-weight: 600; font-size: 0.85rem; text-transform: uppercase; margin-top: 20px; margin-bottom: 5px;">Halwa</li>
             <li><a href="index_halwa.php" class="hovere">Dashboard <span>›</span></a></li>
             <li><a href="AHalwaNewOrder.html" class="hovere">Add New Order <span>›</span></a></li>
             <li><a href="AManageHalwa.html" class="hovere">Orders Management <span>›</span></a></li>
-            <li><a href="AHalwaTransactions.html" class="hovere">Transactions <span>›</span></a></li>
+            <li class="active"><a href="AHalwaTransactions.html">Transactions <span>›</span></a></li>
             <li><a href="ExpensesHalwa.html" class="hovere">Expenses <span>›</span></a></li>
             <li><a href="AHalwaStats.html" class="hovere">Weekly Stats <span>›</span></a></li>
         </ul>
@@ -32,7 +32,7 @@
     <div class="header-row">
         <div class="nav-left">
             <button class="hamburger"><i class="fa-solid fa-bars"></i></button> 
-            <h2>TRANSACTIONS</h2>
+            <h2>TRANSACTIONS (HALWA)</h2>
         </div>
         <div class="search-container">
             <div class="search-box">
@@ -208,6 +208,6 @@
         </div>
     </div>
 
-    <script src="AFruitTransactions.js?v=20241129"></script>
+    <script src="AHalwaTransactions.js?v=20241129"></script>
 </body>
 </html>
