--- a/Expenses.html
+++ b/Expenses.html
@@ -11,12 +11,20 @@
     <nav class="sidebar">
         <button class="close-btn"><i class="fa-solid fa-xmark"></i></button>
         <ul>
+            <li style="padding: 8px 15px; color: #888; font-weight: 600; font-size: 0.85rem; text-transform: uppercase; margin-top: 10px; margin-bottom: 5px;">Orange</li>
             <li><a href="index.php" class="hovere">Dashboard <span>›</span></a></li>
-            <li><a href="AFruitNewOrder.html" class="hovere">Add New Order (Fruits)<span>›</span></a></li>
-            <li><a href="AManageFruits.html" class="hovere">Orders Management (Fruits)<span>›</span></a></li>
+            <li><a href="AFruitNewOrder.html" class="hovere">Add New Order <span>›</span></a></li>
+            <li><a href="AManageFruits.html" class="hovere">Orders Management <span>›</span></a></li>
             <li><a href="AFruitTransactions.html" class="hovere">Transactions <span>›</span></a></li>
             <li class="active"><a href="Expenses.html">Expenses <span>›</span></a></li>
             <li><a href="AFruitStats.html" class="hovere">Weekly Stats <span>›</span></a></li>
+            <li style="padding: 8px 15px; color: #888; font-weight: 600; font-size: 0.85rem; text-transform: uppercase; margin-top: 20px; margin-bottom: 5px;">Halwa</li>
+            <li><a href="index_halwa.php" class="hovere">Dashboard <span>›</span></a></li>
+            <li><a href="AHalwaNewOrder.html" class="hovere">Add New Order <span>›</span></a></li>
+            <li><a href="AManageHalwa.html" class="hovere">Orders Management <span>›</span></a></li>
+            <li><a href="AHalwaTransactions.html" class="hovere">Transactions <span>›</span></a></li>
+            <li><a href="ExpensesHalwa.html" class="hovere">Expenses <span>›</span></a></li>
+            <li><a href="AHalwaStats.html" class="hovere">Weekly Stats <span>›</span></a></li>
         </ul>
     </nav>
 
