--- a/AManageHalwa.html
+++ b/AManageHalwa.html
@@ -14,14 +14,14 @@
             <li style="padding: 8px 15px; color: #888; font-weight: 600; font-size: 0.85rem; text-transform: uppercase; margin-top: 10px; margin-bottom: 5px;">Orange</li>
             <li><a href="index.php" class="hovere">Dashboard <span>›</span></a></li>
             <li><a href="AFruitNewOrder.html" class="hovere">Add New Order <span>›</span></a></li>
-            <li class="active"><a href="AManageFruits.html">Orders Management <span>›</span></a></li>
+            <li><a href="AManageFruits.html" class="hovere">Orders Management <span>›</span></a></li>
             <li><a href="AFruitTransactions.html" class="hovere">Transactions <span>›</span></a></li>
             <li><a href="Expenses.html" class="hovere">Expenses <span>›</span></a></li>
             <li><a href="AFruitStats.html" class="hovere">Weekly Stats <span>›</span></a></li>
             <li style="padding: 8px 15px; color: #888; font-weight: 600; font-size: 0.85rem; text-transform: uppercase; margin-top: 20px; margin-bottom: 5px;">Halwa</li>
             <li><a href="index_halwa.php" class="hovere">Dashboard <span>›</span></a></li>
             <li><a href="AHalwaNewOrder.html" class="hovere">Add New Order <span>›</span></a></li>
-            <li><a href="AManageHalwa.html" class="hovere">Orders Management <span>›</span></a></li>
+            <li class="active"><a href="AManageHalwa.html">Orders Management <span>›</span></a></li>
             <li><a href="AHalwaTransactions.html" class="hovere">Transactions <span>›</span></a></li>
             <li><a href="ExpensesHalwa.html" class="hovere">Expenses <span>›</span></a></li>
             <li><a href="AHalwaStats.html" class="hovere">Weekly Stats <span>›</span></a></li>
@@ -31,7 +31,7 @@
     <div class="header-row">
         <div class="nav-left">
             <button class="hamburger"><i class="fa-solid fa-bars"></i></button>
-            <h2>ORDER MANAGEMENT (FRUITS)</h2>
+            <h2>ORDER MANAGEMENT (HALWA)</h2>
         </div>
 
         <div class="search-container">
@@ -64,7 +64,6 @@
                     <th>Order ID</th>
                     <th>Name</th>
                     <th>Contact</th>
-                    <th>Alt. Contact</th>
                     <th>Week</th>
                     <th>Address</th>
                     <th>Area</th>
@@ -86,6 +85,6 @@
         </table>
     </div>
 
-    <script src="AManageFruits.js?v=<?= filemtime('AManageFruits.js') ?>"></script>
+    <script src="AManageHalwa.js?v=<?= filemtime('AManageHalwa.js') ?>"></script>
 </body>
 </html>
